ncc/testsuite/negative/properties1.n
class A {
  public Prop : string {
    get { ""  }
    private set { ignore (value) }
  }

  public this () { Prop = "" }
}

class B {
  OnlySet : int {
    set { _ = value; }
  }

  OnlyGet : int {
    get { 1 }
  }

  
  public this () {
    def x = A();
    x.Prop = "#";        /// FIXME: should complain!    
    _ = OnlySet;        // E: get accessor is unavailable for a property
    OnlyGet = 4;
  }
}
